add auth and scripts
